# pretty-simple

./: .gitignore  .travis.yml  CHANGELOG.md  Makefile  README.md  Setup.hs  all.js.externs  cabal.project  hie.yaml  out.frefs.js  out.frefs.json  out.js  out.stats  pretty-simple.cabal  stack.yaml  web
.github/: FUNDING.yml
.github/workflows/: ci.yml  deploy.yaml
app/: Main.hs
bench/: Bench.hs  NestedBench.hs
example/: Example.hs  ExampleJSON.hs
example/Example/: Data.hs
src/Debug/Pretty/: Simple.hs
src/Text/Pretty/: Simple.hs
src/Text/Pretty/Simple/: Internal.hs
src/Text/Pretty/Simple/Internal/: Color.hs  Expr.hs  ExprParser.hs  ExprToOutput.hs  Output.hs  OutputPrinter.hs  Parser.hs  Printer.hs
test/: DocTest.hs
web/: README.md  default.nix  index.html  style.css  web.cabal
web.jsexe/: all.js  all.js.externs  index.html  lib.js  manifest.webapp  out.frefs.js  out.frefs.json  out.js  out.stats  rts.js  runmain.js  style.css
web/src/: Main.hs
