name:                pretty-simple
version:             1.0.0.6
synopsis:            pretty printer for data types with a 'Show' instance.
description:         Please see README.md
homepage:            https://github.com/cdepillabout/pretty-simple
license:             BSD3
license-file:        LICENSE
author:              Dennis Gosnell
maintainer:          cdep.illabout@gmail.com
copyright:           2017 Dennis Gosnell
category:            Text
build-type:          Simple
extra-source-files:  README.md
                   , img/pretty-simple-example-screenshot.png
cabal-version:       >=1.10

flag buildexample
  description: Build a small example program showing how to use the pPrint function
  default:     False

library
  hs-source-dirs:      src
  exposed-modules:     Text.Pretty.Simple
                     , Text.Pretty.Simple.Internal
                     , Text.Pretty.Simple.Internal.Expr
                     , Text.Pretty.Simple.Internal.ExprParser
                     , Text.Pretty.Simple.Internal.ExprToOutput
                     , Text.Pretty.Simple.Internal.Output
                     , Text.Pretty.Simple.Internal.OutputPrinter
  build-depends:       base >= 4.8 && < 5
                     , ansi-terminal >= 0.6
                     , containers >= 0.5
                     , lens >= 4.13
                     , mono-traversable >= 0.10
                     , mtl >= 2.2
                     , parsec >= 3.1
                     , semigroups >= 0.18
                     , text >= 1.2
                     , transformers >= 0.4
  default-language:    Haskell2010
  ghc-options:         -Wall
  other-extensions:    TemplateHaskell

executable pretty-simple-example
  main-is:             Example.hs
  other-modules:       Example.Data
  hs-source-dirs:      example
  build-depends:       base
                     , pretty-simple
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

  if flag(buildexample)
    buildable:       True
  else
    buildable:       False

test-suite pretty-simple-doctest
  type:                exitcode-stdio-1.0
  main-is:             DocTest.hs
  hs-source-dirs:      test
  build-depends:       base
                     , doctest
                     , Glob
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

benchmark pretty-simple-bench
  type:                exitcode-stdio-1.0
  main-is:             Bench.hs
  other-modules:       Example.Data
  hs-source-dirs:      bench
                     , example
  build-depends:       base
                     , criterion
                     , pretty-simple
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

source-repository head
  type:     git
  location: git@github.com:cdepillabout/pretty-simple.git
