cabal-version:       2.4
name:                web
version:             0.1.0.0
category:            Web
build-type:          Simple

executable web
    main-is: Main.hs
    hs-source-dirs: src
    build-depends:
        base ^>= 4.16,
        containers,
        generic-lens,
        microlens,
        mtl,
        pretty-simple,
        prettyprinter ^>= 1.7,
        text,
    if !impl(ghcjs)
        build-depends:
            miso ^>= 1.8,
            jsaddle,
            jsaddle-warp,
            transformers,
            wai,
            wai-app-static,
            warp,
            websockets,
    else
        build-depends:
            miso ^>= 1.8,
    ghc-options:
        -Wall
    ghcjs-options:
        -dedupe
    default-language: Haskell2010
    default-extensions:
        DeriveGeneric
        EmptyCase
        FlexibleContexts
        GADTs
        LambdaCase
        OverloadedLabels
        OverloadedStrings
        RankNTypes
        RecordWildCards
        TupleSections
        TypeApplications
