cabal-version:       2.4
name:                web
version:             0.1.0.0
category:            Web
build-type:          Simple

executable web
    main-is: Main.hs
    hs-source-dirs: src
    build-depends:
        containers,
        generic-lens,
        microlens,
        miso ^>= 1.8,
        mtl,
        pretty-simple,
        prettyprinter ^>= 1.7,
        text,
    if !impl(ghcjs)
        build-depends:
            base,
            jsaddle,
            jsaddle-warp,
            transformers,
            wai,
            wai-app-static,
            warp,
            websockets,
    else
        build-depends:
            base ^>= 4.12,
    ghc-options:
        -Wall
    ghcjs-options:
        -dedupe
    default-language: Haskell2010
    default-extensions:
        BlockArguments
        DeriveGeneric
        EmptyCase
        FlexibleContexts
        GADTs
        LambdaCase
        OverloadedLabels
        OverloadedStrings
        RankNTypes
        RecordWildCards
        TupleSections
        TypeApplications
